--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.11.3",
     "@clerk/nextjs": "^5.2.14",
     "@dicebear/collection": "^9.2.1",
     "@dicebear/core": "^9.2.1",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "graphql": "^16.9.0",
     "lucide-react": "^0.424.0",
     "next": "14.2.5",
     "react": "^18",
