--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "graphql": "^16.9.0",
     "lucide-react": "^0.424.0",
     "next": "14.2.5",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
